-yet to be tested- play and pause button implementation with error handlers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HanbackMusicApp</string>
+    <string name="timerRstDisplayVal">00:00</string>
 </resources>
