--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HanbackMusicApp</string>
     <string name="timerRstDisplayVal">00:00</string>
+    <string name="reset_timer_display">00:00</string>
 </resources>
